--- a/src/administration.html
+++ b/src/administration.html
@@ -1,49 +1,69 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Administration</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #ffffff; /* Dark blue similar to Twitter */
+            color: #ffffff;
             margin: 0;
             padding: 0;
         }
+
         h1 {
             text-align: center;
             padding: 20px;
+            color: #1DA1F2; /* Twitter Blue */
         }
+
         table {
             width: 80%;
             margin: 20px auto;
             border-collapse: collapse;
-            background-color: #fff;
+            background-color: #192734; /* Slightly lighter than body background */
+            border-radius: 10px;
+            overflow: hidden;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
-        table th, table td {
-            border: 1px solid #ccc;
-            padding: 10px;
+
+        table th,
+        table td {
+            border: 1px solid #243447; /* Border color */
+            padding: 5px;
             text-align: center;
         }
+
         th {
-            background-color: #333;
-            color: #fff;
+            background-color: #1DA1F2; /* Twitter Blue */
+            color: #ffffff;
         }
+
         tr:nth-child(even) {
-            background-color: #f2f2f2;
+            background-color: #ffffff; /* Lighter row */
         }
+
         tr:nth-child(odd) {
-            background-color: #e6e6e6;
+            background-color: #ffffff; /* Darker row */
         }
+
         button {
-            background-color: #0074d9;
-            color: #fff;
+            background-color: #1DA1F2; /* Twitter Blue */
+            color: #ffffff;
             border: none;
             padding: 5px 10px;
+            border-radius: 15px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #0c85d0; /* Darker blue on hover */
         }
     </style>
 </head>
+
 <body>
     <h1>Administration</h1>
     <table>
@@ -58,7 +78,10 @@
             <th>Is Admin</th>
             <th>Is Blocked</th>
             <th>Action</th>
+            <th>Delete</th>
         </tr>
+        {table_content}
     </table>
 </body>
+
 </html>
